@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
    +deleteByReviewId(): Result
}


class ReviewService {
+ ReviewService(ReviewRepository RevRepo)
+ findById(long ReviewId): Result
+ goodToDel: Result
+ deleteByReviewId(long ReviewId): Result

}

interface ReviewRepository <<interface>> {
+ getReviewById(long ReviewId): Review
+ delete(Review review)
}


class Review {

    -ReviewId
    -Text
    -Rating
    -Date
    -Status
    -upVote
    -downVote
   Review(reviewId,text,rating,date,status,upVote,downVote)
   +goodToDel(int upVotes, int downVotes): Result
}


ReviewRepository "1" -right-> "0..*" Review:  records
ReviewController ..> ReviewService
ReviewService ..> ReviewRepository
ReviewService ..> Review
@enduml
